
syntax = "proto3";

package pb;

option go_package = "./;pb";

// package pb;
option java_package = "pb";

// 消息probuf反序列化的时候依赖创建struct
enum TYPE {
  TYPE_INVALID = 0;  // 异常
  HELLO = 1;
  ACK = 2;
  NOTICE = 3;

  TYPE_MAX = 16;
};

// callee 调用的时候依赖找执行函数
enum CallID {
  CAll_INVAL = 0;  // 异常
  CALL_NOTICE = 1;

  CALL_MAX = 16;
};
